@@ -1,3 +1,2 @@
 DIST subsonic-4.9-standalone.tar.gz 31230012 SHA256 0c770a1c09c80cb2cbaef074923a0e1edf5ce25c47110efc06a12a6995ade3d3 SHA512 aa80e02c79696393c3cc761a9f4b01cab0c9b0447fb81664c517d6a2967dda44b7bb99e1fea21e9c46fee9ccfde8e362e14423c91104827db57e35731be5173c WHIRLPOOL 6fc6d7efab5b2f12c4a596cf56d3fded9b3bc9896930b095371d175dd9269eb53370c8990a720ede0c84973e84fbe9b85f804d4bb41285168cedb98f38b4f174
 DIST subsonic-5.0-standalone.tar.gz 36711672 SHA256 e13500f5b50693c9aa688f3a97b6aee42dd3609ab443ca1859dcbe1042eecb06 SHA512 d4b710be364fac0f8d436daa375d1a3a46b336e1b48c1458d3511fc310a514db28ea04401dc4ec0a859eb0c099d867376b96286260279368ce9302538574c3b8 WHIRLPOOL 5f3a532b154e20a3ccef47e486f7df126fe1246f84113f264c854be1eefe90e450a6450ee3ff7e487430a1f8fcae4cb3478d3cb90e4e87f6534c61618ff997bf
-DIST subsonic-5.0.beta2-standalone.tar.gz 36714559 SHA256 78e34d530fcdc987d30636b55c428196d88295043b9ae8a2729fffe029a221d2 SHA512 e47813bbe64e3a4574fa6e4f2d117100e54af5fbaa51d162e3e147d65174aa3d2f0c088ff34f22bef2f7efc7faea432437491956e7be3028d9810d0278dc5015 WHIRLPOOL 0b28682f22cc77cc7513de0bb02ad0af1d1fbb422cd5a2f929379c17297693d8a3664c2c2e072021cc8c490330610d49d8d930402570f13713d3d3bd6c238522
