@@ -5,7 +5,7 @@
     <email>harold@alum.mit.edu</email>
   </maintainer>
   <longdescription lang="en">
-    A java-based music server. 
+    A java-based music server
   </longdescription>
   <upstream>
     <doc lang="en">http://subsonic.org</doc>
