@@ -1,5 +1,9 @@
 
 
+  23 Nov 2014; Harold Naparst <harold@alum.mit.edu> subsonic-4.9.ebuild,
+  -subsonic-5.0_beta2.ebuild, subsonic-5.0.ebuild, metadata.xml:
+  Removed beta ebuilds. Cleaning up generally.
+
 *subsonic-5.0 (06 Oct 2014)
 
   06 Oct 2014; Harold Naparst <harold@alum.mit.edu> +subsonic-5.0.ebuild:
